<resources>
    <string name="app_name">niceshop</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_cancel_button">Cancel</string>
    <string name="login_register_button">Register</string>
    <string name="login_error_message">password must have 6 characters</string>
    <string name="search_title">Search</string>
    <string name="filter_title">Title</string>
    <string name="product_title">Title</string>
    <string name="product_description">hi, this is a new product.</string>
    <string name="menu_hamburger_featured">Featured</string>
    <string name="menu_hamburger_category">Category</string>
    <string name="menu_hamburger_shoes">Shoes</string>
    <string name="menu_hamburger_t_shirt">T-Shirt</string>
    <string name="menu_hamburger_pants">Pants</string>
    <string name="menu_hamburger_dresses">Dresses</string>
    <string name="menu_hamburger_tops">Tops</string>
    <string name="menu_hamburger_account">Account</string>
</resources>