<?xml version="1.0" encoding="UTF-8" ?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_hamburger_featured"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_hamburger_category"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_hamburger_shoes"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_hamburger_t_shirt"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_hamburger_pants"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_hamburger_dresses"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_hamburger_tops"
        />
    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?attr/colorPrimary"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.NiceShop.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_hamburger_account"
        />
</merge>