<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.NiceShop.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:title="@string/app_name"
            app:navigationIcon="@drawable/menu"
            app:titleTextColor="@color/black"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="160dp"
        android:layout_height="220dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="70dp"
        app:cardBackgroundColor="@color/purple_200"
        app:cardCornerRadius="4dp"
        app:cardElevation="@dimen/cardview_default_elevation"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="8dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/product_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/product_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</FrameLayout>